test/already_defined.ref
Error: File "already_defined.cppo", line 3, characters 0-17
Error: "FOO" is already defined
