test/already_defined.cppo
(* A macro is defined twice. *)
#define FOO "oh"
#define FOO "no"
